[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Fonts/Rubik/Rubik-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Textures/LightBackgroundPanel.png" type="Texture" id=2]
[ext_resource path="res://Temp/QuizScript.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="StreamTexture" id=4]
load_path = "res://.import/LightBackgroundPanel.png-9ff041d6d83139890fb20d8d75c4b162.stex"

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 48
font_data = ExtResource( 1 )

[node name="QuizPanel" type="Node"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="QuestionBG" type="NinePatchRect" parent="Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -116.0
margin_right = 304.0
margin_bottom = 116.0
texture = ExtResource( 2 )
patch_margin_left = 6
patch_margin_top = 8
patch_margin_right = 6
patch_margin_bottom = 10
__meta__ = {
"_edit_group_": true
}

[node name="Question" type="Label" parent="Control/QuestionBG"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "QUESTIONS"
align = 1
valign = 1

[node name="ChoicesBG" type="NinePatchRect" parent="Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -304.0
margin_top = -116.0
margin_bottom = 116.0
texture = SubResource( 4 )
patch_margin_left = 6
patch_margin_top = 8
patch_margin_right = 6
patch_margin_bottom = 10
__meta__ = {
"_edit_group_": true
}

[node name="Choices" type="VBoxContainer" parent="Control/ChoicesBG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
alignment = 1

[node name="A" type="Label" parent="Control/ChoicesBG/Choices"]
margin_top = 18.0
margin_right = 288.0
margin_bottom = 75.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "CHOICES"
valign = 1

[node name="B" type="Label" parent="Control/ChoicesBG/Choices"]
margin_top = 79.0
margin_right = 288.0
margin_bottom = 136.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "CHOICES"
valign = 1

[node name="C" type="Label" parent="Control/ChoicesBG/Choices"]
margin_top = 140.0
margin_right = 288.0
margin_bottom = 197.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "CHOICES"
valign = 1

[node name="ClueButton" type="Button" parent="Control"]
margin_right = 64.0
margin_bottom = 32.0
text = "CLUE"

[node name="NextButton" type="Button" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -184.0
margin_top = -56.0
margin_right = -120.0
margin_bottom = -24.0
text = "NEXT"

[node name="BackButton" type="Button" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = -56.0
margin_right = 184.0
margin_bottom = -24.0
text = "BACK"

[node name="Control2" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="CluePanel" type="Panel" parent="Control2"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -116.0
margin_right = 256.0
margin_bottom = 116.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control2/CluePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="Control2/CluePanel/VBoxContainer"]
margin_top = 81.0
margin_right = 480.0
margin_bottom = 95.0
text = "CLUE"
align = 1
valign = 1

[node name="Clue" type="Label" parent="Control2/CluePanel/VBoxContainer"]
margin_top = 105.0
margin_right = 480.0
margin_bottom = 119.0
text = "CLUE"
align = 1
valign = 1

[connection signal="pressed" from="Control/ClueButton" to="." method="_on_ClueButton_pressed"]
[connection signal="pressed" from="Control/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="Control/BackButton" to="." method="_on_BackButton_pressed"]
